Fix hero image from breaking on mobile

--- a/app/styles/homepage.scss
+++ b/app/styles/homepage.scss
@@ -2,9 +2,10 @@
 
   &-image {
     position: relative;
-    width: 100%;
+    // width: 100%;
     height: 65vh;
     object-fit: cover;
+    flex-grow: 1;
   }
 
   &-text {
